--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,9 @@
 
     </div>
 
-    <script src="index.js"></script>
+    <script src="api-client.js" type="module"></script>
+    <script src="util.js" type="module"></script>
+    <script src="index.js" type="module"></script>
 </body>
 
 </html>
