--- a/src/index.html
+++ b/src/index.html
@@ -11,17 +11,11 @@
 
 <body class="bg-light">
 
-    <nav class="navbar navbar-dark bg-primary">
-        <div class="container">
-            <span class="navbar-brand mb-0 h1">Crime Data</span>
-        </div>
-    </nav>
-
-    <div class="bg-primary pb-5 text-light">
+    <div class="bg-primary pt-5 pb-5 text-light">
 
         <div class="container">
 
-            <h1>View local crime statistics</h1>
+            <h1>Crime Statistics</h1>
 
             <form id="search-form" class="row g-3" novalidate>
 
@@ -29,7 +23,7 @@
 
                     <label for="lat" class="form-label">Latitude</label>
                     <input id="lat" type="text" class="form-control" required maxlength="8" />
-                    
+
                 </div>
 
                 <div class="col-3">
@@ -71,6 +65,8 @@
 
                 <div class="card-body">
 
+                    <h6 class="title text-muted">Crimes in One Mile Radius</h6>
+
                     <table id="results" class="table bg-white" hidden>
                         <thead>
                             <tr>
@@ -81,7 +77,7 @@
                         <tbody>
                         </tbody>
                     </table>
-        
+
                     <template>
                         <tr>
                             <td></td>
