Fix invalid HTML

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="index.css">
     <script src="https://www.gstatic.com/charts/loader.js"></script>
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
     <title>Crime Statistics</title>
 </head>
 
@@ -97,6 +96,7 @@
             <p class="text-muted">Data provided by <a href="https://data.police.uk"
                     target="_blank">https://data.police.uk</a></p>
             </div>
+        </footer>
 
     </section>
 
@@ -104,15 +104,9 @@
         <div class="spinner-border text-secondary align-self-center" role="status"></div>
     </template>
 
-    </div>
-
     <script src="api-client.js" type="module"></script>
     <script src="form.js" type="module"></script>
     <script src="search.js" type="module"></script>
-
-    <footer>
-
-    </footer>
 
 </body>
 
