Fix accessibility issues

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -30,7 +30,7 @@
                         <input id="lat" type="hidden" required />
                         <input id="lng" type="hidden" required />
                         <div class="input-group-append">
-                            <button id="geolocate" type="button" class="btn btn-light">
+                            <button id="geolocate" type="button" class="btn btn-light" aria-label="My Location">
                                 <i class="bi bi-geo-alt"></i>
                             </button>
                         </div>
@@ -93,8 +93,7 @@
         </div>
 
         <footer class="row">
-            <p class="text-muted">Data provided by <a href="https://data.police.uk"
-                    target="_blank">https://data.police.uk</a></p>
+            <p class="text-muted">Data provided by <a href="https://data.police.uk" rel="noopener" target="_blank">https://data.police.uk</a></p>
             </div>
         </footer>
 
